<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:text="@string/secintro"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/border2"
        android:id="@+id/ED2"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/Cap"
        android:layout_below="@id/ED2"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/Sml"
        android:layout_below="@id/ED2"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Org"
        android:layout_below="@id/ED2"
        android:layout_marginLeft="400dp"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/button5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/bck"
        android:layout_below="@id/button3"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="20dp"
        />

</RelativeLayout>