<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textSize="17dp"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginStart="117dp"
        android:layout_marginTop="40dp"
        android:text="@string/button"
        android:background="@drawable/border"
        android:enabled="false"


        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:text="@string/cnt"
        android:layout_marginTop="10dp"
        android:layout_below="@id/button"
        android:layout_marginLeft="60dp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="500dp"
        android:layout_height="40dp"
        android:layout_below="@id/textView2"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border2"
        android:hint="@string/Ed"
        />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_below="@+id/button"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="10dp"

        />

</RelativeLayout>